--- a/config/database.yml
+++ b/config/database.yml
@@ -15,8 +15,9 @@ development:
   reconnect: false
   database: patrick_development
   pool: 5
-  username: root
-  password:
+  host: 192.168.11.32
+  username: patrick_admin
+  password: patrick
   port: 3306
   socket: /tmp/mysql.sock
 
