[UPDATE] 1. 初始化10条酒的条目 2. 初始化其他数据（酒的类型，葡萄品种等等） 3. Wine Register 4. 组织I18N文件.
Signed-off-by: Weston <weixuhong@gmail.com>

--- a/test/fixtures/wines.yml
+++ b/test/fixtures/wines.yml
@@ -5,6 +5,21 @@
 # below each fixture, per the syntax in the comments below
 #
 one: {}
+#  name_en:
+#  name_zh:
+#  official_site:
+#  wine_style_id:
+#  region_tree_id:
+#  winery_id:
+#  photo_name:
+#  photo_origin_name:
+#  vintage:
+#  drinkable_begin:
+#  drinkable_end:
+#  alcoholicity:
+#  variety_percentage:
+#  variety_name:
+#  capacity:
 # column: value
 #
 two: {}
