--- a/config/data.yml
+++ b/config/data.yml
@@ -7,3 +7,15 @@ users:
     item:
       location: [北京, 上海, 香港,广州, 深圳, 其他]
   
+user_profile:
+  configs:
+    normal: 
+      1: 所有人可见
+      2: 我关注的人可见
+      3: 仅自己可见
+    birth_day: 
+      1: 公开
+      2: 完整显示
+      3: 只显示星座
+      4: 只显示月日
+      5: 保密
