--- a/config/database.yml.sample
+++ b/config/database.yml.sample
@@ -9,12 +9,12 @@ development:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: patrick_development
+  database: patrick_develop
   pool: 10
   username: root
-  password:
+  password: 123456
   host: localhost
-  socket: /tmp/mysql.sock
+  socket: /var/lib/mysql/mysql.sock
 
 
 # Warning: The database defined as "test" will be erased and
@@ -29,7 +29,7 @@ test:
   username: root
   password:
   host: localhost
-  socket: /tmp/mysql.sock
+  socket: /var/lib/mysql/mysql.sock
 
 
 production:
@@ -41,4 +41,4 @@ production:
   username: root
   password:
   host: localhost
-  socket: /tmp/mysql.sock
+  socket: /var/lib/mysql/mysql.sock
