--- a/config/data.yml
+++ b/config/data.yml
@@ -21,7 +21,4 @@ user_profile:
       5: 保密
 friends:
   oauth:
-    authorize_url:
-      sina: "/sync/sina/new"
-      qq: "/sync/qq/new"
-      douban: "/sync/douban/new"
+    sync_url: /friends/sync
