--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ nbproject/
 .project
 tmtags
 *.swp
-/.settings/
+.settings/
 .gitkeep
 .idea/*
 config/database.yml
@@ -18,8 +18,8 @@ public/uploads/*
 config/deploy.rb
 Capfile
 Gemfile.lock
-/.idea/workspace.xml
-/app/models/user.rb
-/db/schema.rb
+.idea/workspace.xml
+db/schema.rb
 #*#
 
+lib/tasks/data
