--- a/config/data.yml
+++ b/config/data.yml
@@ -58,3 +58,15 @@ image:
       width: 30
       height: 30
 
+  wine_label:
+    thumb:
+      width: 100
+      height: 100
+    middle:
+      width: 200
+      height: 200
+    large:
+      width: 300
+      height: 300
+
+
