--- a/.gitignore
+++ b/.gitignore
@@ -20,15 +20,12 @@ Capfile
 Gemfile.lock
 .idea/workspace.xml
 db/schema.rb
-#*#
 
 lib/tasks/data
-
-/app/assets/javascripts/region_world.js
-/.gitignore
-/.idea/workspace.xml
-/db/wine_variety_i18n.csv
+.idea/workspace.xml
+db/wine_variety_i18n.csv
 .rakeTasks
-/.idea/.rakeTasks
+.idea/.rakeTasks
 schema.rb
-/notify.log
+notify.log
+lib/wines_photos
