Bugs Fixed：参考bugs表
Signed-off-by: Weston <weixuhong@gmail.com>

--- a/config/data.yml
+++ b/config/data.yml
@@ -1,5 +1,6 @@
 wines:
-  capacity: [750ml, 500ml, 200ml, 其他]
+  capacity: [750ml, 620ml,500ml,375ml,250ml,187.5ml,1.5l,2.25l,3l,4.5l,6l,9l,12l,15l,20l,25l,27l,30l, 其他]
+
 users:
   cellars:
     item:
@@ -137,7 +138,10 @@ search_server:
 
 search:
   wine:
-    style: ["红葡萄酒", "白葡萄酒", "气泡酒", "香槟"]
+    style: ["红葡萄酒", "白葡萄酒", "气泡酒", "粉红葡萄酒"]
+    country: ["法国", "意大利", "西班牙", "德国", "奥地利", "澳洲", "新西兰", "智利", "阿根廷", "美国", "南非"]
+    hot_area: ["波尔多", "勃艮第", "纳帕谷"]
+  winery:
     country: ["法国", "意大利", "西班牙", "德国", "奥地利", "澳洲", "新西兰", "智利", "阿根廷", "美国", "南非"]
     hot_area: ["波尔多", "勃艮第", "纳帕谷"]
 
