--- a/config/oauth/douban.yml
+++ b/config/oauth/douban.yml
@@ -1,11 +1,11 @@
 development:
-  key:    03d7e14aef3e11590b87a3e0cdba340b
-  secret: 46be81cb7f653bf1
+  key:    07eb65662d86fb1517c230328894f13f
+  secret: fe3a1de3529308f9
   url:    http://localhost:3000
   callback: "http://localhost:3000/friends/douban/callback"
 
 production:
-  key:    03d7e14aef3e11590b87a3e0cdba340b
-  secret: 46be81cb7f653bf1
-  url:    http://localhost:3000
-  callback: "http://localhost:3000/friends/douban/callback"
+  key:    07eb65662d86fb1517c230328894f13f
+  secret: fe3a1de3529308f9
+  url:    http://iwine.com
+  callback: "http://iwine.com/friends/douban/callback"
