--- a/config/oauth/qq.yml
+++ b/config/oauth/qq.yml
@@ -1,11 +1,11 @@
 development:
-  key:    801082967
-  secret: 2a127a239da09c9ae8086dc30b0ed4e8
+  key:    801091917
+  secret: 400c5d0f2a08ea78e6e637c402eab604
   url:    http://localhost:3000
   callback: "http://localhost:3000/friends/qq/callback"
 
 production:
-  key:    801082967
-  secret: 2a127a239da09c9ae8086dc30b0ed4e8
-  url:    http://localhost:3000
-  callback: "http://localhost:3000/friends/qq/callback"
+  key:    801091917
+  secret: 400c5d0f2a08ea78e6e637c402eab604
+  url:    http://iwine.com
+  callback: "http://iwine.com/friends/qq/callback"
