--- a/config/data.yml
+++ b/config/data.yml
@@ -154,11 +154,11 @@ photo:
 
 email:
   from:
-    normal: "service@sidways.com"
+    normal: "non-reply@iWine.com"
     #TODO: 根据不同需要在这里继续添加
   to:
-    normal: "service@sidways.com"
-    feedback: "support@sidways.zendesk.com"
+    normal: "non-reply@iWine.com"
+    feedback: "non-reply@iWine.com" # 接收用户反馈的邮箱帐号
 
 
 
