--- a/config/data.yml
+++ b/config/data.yml
@@ -155,7 +155,7 @@ email:
     #TODO: 根据不同需要在这里继续添加
   to:
     normal: "non-reply@iWine.com"
-    feedback: "non-reply@iWine.com" # 接收用户反馈的邮箱帐号
+    feedback: "support@sidways.zendesk.com" # 接收用户反馈的邮箱帐号
 
 
 
