--- a/config/data.yml
+++ b/config/data.yml
@@ -130,7 +130,7 @@ timeline:
 search_server:
   host: www.sidways.com
   port: 8080
-  entry_url: /patrick/query/
+  entry_url: /patrick/query/all
   word_url: /patrick/query/associate
 
 search:
@@ -151,11 +151,8 @@ photo:
 
 email:
   from:
-    normal: "non-reply@iWine.com"
+    normal: "爱酒网 <non-reply@iWine.com>"
     #TODO: 根据不同需要在这里继续添加
   to:
     normal: "non-reply@iWine.com"
     feedback: "support@sidways.zendesk.com" # 接收用户反馈的邮箱帐号
-
-
-
