--- a/config/data.yml
+++ b/config/data.yml
@@ -130,7 +130,7 @@ timeline:
 search_server:
   host: www.sidways.com
   port: 8080
-  entry_url: /patrick/query/
+  entry_url: /patrick/query/all
   word_url: /patrick/query/associate
 
 search:
