--- a/config/data.yml
+++ b/config/data.yml
@@ -1,5 +1,24 @@
 wines:
-  capacity: [750ml, 620ml,500ml,375ml,250ml,187.5ml,1.5l,2.25l,3l,4.5l,6l,9l,12l,15l,20l,25l,27l,30l, 其他]
+  capacity:
+    750ml: 750
+    620ml: 620
+    500ml: 500
+    375ml: 375
+    250ml: 250
+    187.5ml: 187.5
+    1.5l: 1500
+    2.25l: 2250
+    3l: 3000
+    4.5l: 4500
+    6l: 6000
+    9l: 9000
+    12l: 12000
+    15l: 15000
+    20l: 20000
+    25l: 25000
+    27l: 27000
+    30l: 30000
+    其他:      #设置为空
 
 users:
   cellars:
