--- a/config/data.yml
+++ b/config/data.yml
@@ -167,6 +167,10 @@ photo:
     label: 1
     cover: 2
     normal: 0
+  audit_status:
+    submitted: 0
+    approved: 1
+    reject: 2
 
 email:
   welcome:
