--- a/config/data.yml
+++ b/config/data.yml
@@ -176,4 +176,4 @@ email:
     #TODO: 根据不同需要在这里继续添加
   to:
     normal: "non-reply@iWine.com"
-    feedback: "support@sidways.zendesk.com" # 接收用户反馈的邮箱帐号
+    feedback: "suggestion@iwine.com" # 接收用户反馈的邮箱帐号
