将相册的“赞”去掉; 收藏酒时，不填写容量； 图片尺寸和缩小方法更改； 用户关注、粉丝页面样式更改； 推荐用户不展示当前用户；

--- a/config/data.yml
+++ b/config/data.yml
@@ -1,23 +1,23 @@
 wines:
   capacity:
-    750ml: 750
-    620ml: 620
-    500ml: 500
-    375ml: 375
-    250ml: 250
-    187.5ml: 187.5
-    1.5l: 1500
-    2.25l: 2250
-    3l: 3000
-    4.5l: 4500
-    6l: 6000
-    9l: 9000
-    12l: 12000
-    15l: 15000
-    20l: 20000
-    25l: 25000
-    27l: 27000
-    30l: 30000
+    750ml: '750'
+    620ml: '620'
+    500ml: '500'
+    375ml: '375'
+    250ml: '250'
+    187.5ml: '187.5'
+    1.5l: '1500'
+    2.25l: '2250'
+    3l: '3000'
+    4.5l: '4500'
+    6l: '6000'
+    9l: '9000'
+    12l: '12000'
+    15l: '15000'
+    20l: '20000'
+    25l: '25000'
+    27l: '27000'
+    30l: '30000'
     其他:      #设置为空
 
 users:
@@ -109,7 +109,9 @@ image:
     large:
       width: 440
       height: 440
-      
+    large_x:
+      width: 610
+      height: 640
   winery:
     xxx_thumb: 
       width: 50
