--- a/config/data.yml
+++ b/config/data.yml
@@ -165,7 +165,7 @@ search_server:
 
 search:
   wine:
-    style: ["红葡萄酒", "白葡萄酒", "气泡酒", "粉红葡萄酒"]
+    style: ["红葡萄酒", "白葡萄酒", "起泡酒", "粉红葡萄酒"]
     country: ["法国", "意大利", "西班牙", "德国", "奥地利", "澳洲", "新西兰", "智利", "阿根廷", "美国", "南非"]
     hot_area: ["波尔多", "勃艮第", "纳帕谷"]
   winery:
