使用java提供的搜索服务搜索用户， 并排除未激活的用户， #325

--- a/config/data.yml
+++ b/config/data.yml
@@ -163,6 +163,7 @@ search_server:
   port: 8080
   entry_url: /patrick/query/all
   word_url: /patrick/query/associate
+  user_url: /patrick/query/user
 
 search:
   wine:
