--- a/config/data.yml
+++ b/config/data.yml
@@ -1,4 +1,15 @@
 site: "iWine.com"
+rate:
+  CNY: 1.00
+  HKD: 0.95
+  JPY: 0.07
+  SGD: 4.95
+  USD: 6.37
+  GBP: 9.82
+  AUD: 6.49
+  NZD: 5.21
+  EUR: 7.78
+  CAD: 6.35
 wines:
   capacity:
     750mL: '750'
