--- a/config/data.yml
+++ b/config/data.yml
@@ -74,6 +74,11 @@ friends:
   oauth:
     sync_url: /friends/sync
     
+user_oauths:
+  setting_type:
+    login: 1 #用户通过第三方登陆
+    binding: 2 # 用户登录后得绑定操作
+
 # 图片缩略图
 image:
   album:
