1、完善清洗程序； 2、完善新浪微博找好友功能。

--- a/config/oauth/production_all.yml
+++ b/config/oauth/production_all.yml
@@ -1,7 +1,4 @@
-sina:
-  key:    873127458 # iwine
-  secret: 422a1373ca21efa5b2a23c95999f16d8
-  url:    http://iwine.com
-  callback: "http://iwine.com/oauth_login/sina/update_info?"
-qq:
-  callback: "http://iwine.com/oauth_login/qq/update_info"
+weibo:
+  key:    721657578 # iwine 
+  secret: 91d9d64624ae1efb1bd88c935c35b3c0
+  site:   https://api.weibo.com
