--- a/config/data.yml
+++ b/config/data.yml
@@ -262,7 +262,6 @@ api:
    register_failed:
      code: 422
      message: ""
-   
 
 event:
  publish_status:
@@ -270,14 +269,8 @@ event:
   draft: 1
   published: 2
   locked: 3
+ city: { '上海': 1,  '成都': 2, '北京': 3, '深圳': 4}
 event_participant:
  join_status:
   joined: 1
   cancle: 0
- 
-
-
-     
-    
-   
-  
