--- a/config/data.yml
+++ b/config/data.yml
@@ -269,7 +269,7 @@ event:
   draft: 1
   published: 2
   locked: 3
- city: { '上海': 1,  '成都': 2, '北京': 3, '深圳': 4}
+ city: { '上海': 1,  '成都': 2, '北京': 3, '深圳': 4, '广州': 5}
 event_participant:
  join_status:
   joined: 1
