--- a/config/data.yml
+++ b/config/data.yml
@@ -263,7 +263,7 @@ event:
   draft: 1
   published: 2
   locked: 3
- city: { '上海': 1,  '成都': 2, '北京': 3, '深圳': 4, '广州': 5}
+ city: { '上海': 1,  '成都': 2, '北京': 3, '深圳': 4, '广州': 5, '其他':'6'}
 event_participant:
  join_status:
   joined: 1
