--- a/config/data.yml
+++ b/config/data.yml
@@ -191,8 +191,8 @@ timeline:
      
        
 search_server:
-  host: 180.168.220.98
-  port: 8081
+  host: search.iwine.com
+  port: 8080
   entry_url: /patrick/query/all
   word_url: /patrick/query/associate
   user_url: /patrick/query/user
