1.活动添加搜索 2. 添加crontab task 每天晚上12:00 自动更新索引

--- a/config/data.yml
+++ b/config/data.yml
@@ -196,6 +196,7 @@ search_server:
   entry_url: /patrick/query/all
   word_url: /patrick/query/associate
   user_url: /patrick/query/user
+  event_url: /patrick/query/events
 
 search:
   wine:
