--- a/config/data.yml
+++ b/config/data.yml
@@ -79,6 +79,22 @@ oauth_comments:
 
 # 图片缩略图
 image:
+  note:
+    origin:
+      width: 800
+      height: 800
+    large:
+      width: 600
+      height: 600
+    middle_x:
+      width: 200
+      height: 200
+    middle:
+      width: 100
+      height: 100
+    thumb:
+      width: 70
+      height: 70
   album:
     x_middle:
       width: 190
