--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -13,7 +13,7 @@ common: &default_settings
 
   # You must specify the license key associated with your New Relic
   # account.  This key binds your Agent's data to your account in the
-  # New Relic service.
+  # New Relic lib.
   license_key: 'd9a1163b1a17b776e4cda2985aea5581cfb8091e'
   
   # Agent Enabled (Ruby/Rails Only)
@@ -36,7 +36,7 @@ common: &default_settings
   app_name: My Application
 
   # When "true", the agent collects performance data about your 
-  # application and reports this data to the New Relic service at
+  # application and reports this data to the New Relic lib at
   # newrelic.com. This global switch is normally overridden for each 
   # environment below. (formerly called 'enabled')
   monitor_mode: true
@@ -50,7 +50,7 @@ common: &default_settings
   # log level here.
   log_level: info
   
-  # The newrelic agent communicates with the New Relic service via http by
+  # The newrelic agent communicates with the New Relic lib via http by
   # default.  If you want to communicate via https to increase
   # security, then turn on SSL by setting this value to true.  Note,
   # this will result in increased CPU overhead to perform the
@@ -65,7 +65,7 @@ common: &default_settings
   # you send us needs end-to-end verified certificates.
   #
   # This means we cannot cache the DNS lookup, so each request to the
-  # New Relic service will perform a lookup. It also means that we cannot
+  # New Relic lib will perform a lookup. It also means that we cannot
   # use a non-blocking lookup, so in a worst case, if you have DNS
   # problems, your app may block indefinitely.
   # verify_certificate: true
@@ -90,7 +90,7 @@ common: &default_settings
   capture_params: false
 
   # Transaction tracer captures deep information about slow
-  # transactions and sends this to the New Relic service once a
+  # transactions and sends this to the New Relic lib once a
   # minute. Included in the transaction is the exact call sequence of
   # the transactions including any SQL statements issued.
   transaction_tracer:
@@ -177,7 +177,7 @@ common: &default_settings
 
 development:
   <<: *default_settings
-  # Turn off communication to New Relic service in development mode (also
+  # Turn off communication to New Relic lib in development mode (also
   # 'enabled').
   # NOTE: for initial evaluation purposes, you may want to temporarily 
   # turn agent communication on in development mode.
