修复添加颜色的JS的的bug

--- a/config/note_trait.yml
+++ b/config/note_trait.yml
@@ -74,7 +74,7 @@ zh:
     Herbaceous_Asparagus:	芦笋
     Herbaceous_BlackcurrantLeaf:	黑加仑树叶
     Herbaceous_Pyrazine:	吡嗪
-    Herbal:	草药类
+  Herbal:
     Herbal_Eucalyptus:	桉树
     Herbal_Mint:	薄荷
     Herbal_Medicinal:	草药
