删除、发布品酒辞（完成度99%）； 更改上传品酒辞第一步操作。

--- a/config/note.yml
+++ b/config/note.yml
@@ -9,6 +9,9 @@ note:
   status_flag:
     submitted: 1
     published: 0
+  delete_flag:
+    removed: 1
+    unremove: 0
   appearance:
     clarity_a:
       0: ''
