修复edit note 评分的星标发生浮动的bug; 更改user_agent 的值； 已经发布的note不能再转换为submitted状态; wine profile 增加 ‘写品酒辞'按钮。

--- a/config/note.yml
+++ b/config/note.yml
@@ -4,8 +4,8 @@ note:
     base_url: "iwinenotes/images"
     version: "normal"
   user_agent:
-    app: "iwine_notes"
-    local: "iwine.com"
+    app: "NOTES_AGENT"
+    local: "IWINE_AGENT"
   status_flag:
     submitted: 1
     published: 0
