添加西柚的中文

--- a/config/note_trait.yml
+++ b/config/note_trait.yml
@@ -20,7 +20,7 @@ zh:
   GreenFruit_Quince:	温柏
   GreenFruit_Grape:	葡萄
   CitrusFruit:	柑橘类水果
-  CitrusFruit_Grapefruit:
+  CitrusFruit_Grapefruit: 西柚
   CitrusFruit_Lemon:	柠檬
   CitrusFruit_Lime:	青柠
   CitrusFruit_OrangePeel:	橙皮
